able to do 2 number operations

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     
     <div class="attribution">
-      Coded by <a href="#">Kassim Zaid</a>.
+      Coded by <a href="#">Kassim Zaid</a>
     </div>
     <script src="/index.js" type="module"></script>
   </body>
