2 number operations done

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/jpg" sizes="32x32" href="./images/metwimba.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
-    <title>Frontend Mentor | Calculator app</title>
+    <title>Solo Project | Calculator app</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
+      <h3>This calculator does 2 number operations. Use the equal sign to see the answer.</h3>
       <input id="input" class="radius" type="text" value="">
       <div class="allbuttons radius">
         <button value=7 class="calc-btns nine-to-x radius">7</button>
@@ -39,7 +40,7 @@
     </div>
     
     <div class="attribution">
-      Coded by <a href="#">Kassim Zaid</a>
+      Coded by <a href="https://twitter.com/kassimfrontend" target="_blank">Kassim Zaid</a>
     </div>
     <script src="/index.js" type="module"></script>
   </body>
